.k8_manifest/membership-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: membership-deployment
  namespace: backend
  labels:
    app: membership-apis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: membership-apis
  template:
    metadata:
      labels:
        app: membership-apis
    spec:
      containers:
        - name: membership-apis
          image: registry.digitalocean.com/lct-registry/membership-apis:${CIRCLE_SHA1}

          ports:
            - containerPort: 8070
---
apiVersion: v1
kind: Service
metadata:
  name: membership-service
  namespace: backend
spec:
  selector:
    app: membership-apis
  ports:
    - port: 8070
      targetPort: 8070
  type: ClusterIP
